tests/unit/default/syntax-error/033-create-table-parens-name-colon-type-params-null.e.t
---- IN ----
+%table(id:decimal(10,2)?
---- OUT ----
---- ERR ----
syntax: expected `)` after `...le(id:decimal(10,2)?` instead of EOL at position 25 - at line 1
---- EXIT ----
1
